Fixed bad display of menu items on mobile version

--- a/src/app/layouts/navbar/navbar.component.css
+++ b/src/app/layouts/navbar/navbar.component.css
@@ -17,7 +17,3 @@
 .menu-item-active {
     color: #e41919 !important;
 }
-
-.header.header-small .inner-nav>ul>li>a {
-    color: #202020;
-}
